added more pictures of DC

--- a/Develop/modal.html
+++ b/Develop/modal.html
@@ -100,7 +100,7 @@
     }
     img {
       width: 230;
-      padding: 5px;
+      padding: 10px;
       filter: none;
       transition: 1s;
     }
@@ -129,7 +129,7 @@
     </div>
 
     <script>
-      let totalImages = 4;
+      let totalImages = 10;
       let y = $('<div>').addClass('xyz');
       for(let i = 1; i < totalImages + 1; i++) {
         x = `<div class="column">
@@ -148,23 +148,48 @@
       <span class="close cursor" onclick="closeModal()">&times;</span>
       <div class="modal-content">
         <div class="mySlides">
-          <div class="numbertext">1 / 4</div>
+          <div class="numbertext">1 / 10</div>
           <img src="assets/images/modal/pic1.jpeg" style="width: 100%" />
         </div>
 
         <div class="mySlides">
-          <div class="numbertext">2 / 4</div>
+          <div class="numbertext">2 / 10</div>
           <img src="assets/images/modal/pic2.jpeg" style="width: 100%" />
         </div>
 
         <div class="mySlides">
-          <div class="numbertext">3 / 4</div>
+          <div class="numbertext">3 / 10</div>
           <img src="assets/images/modal/pic3.jpeg" style="width: 100%" />
         </div>
 
         <div class="mySlides">
-          <div class="numbertext">4 / 4</div>
+          <div class="numbertext">4 / 10</div>
           <img src="assets/images/modal/pic4.jpeg" style="width: 100%" />
+        </div>
+
+        <div class="mySlides">
+          <div class="numbertext">5 / 10</div>
+          <img src="assets/images/modal/pic5.jpeg" style="width: 100%" />
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">6 / 10</div>
+          <img src="assets/images/modal/pic6.jpeg" style="width: 100%" />
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">7 / 10</div>
+          <img src="assets/images/modal/pic7.jpeg" style="width: 100%" />
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">8 / 10</div>
+          <img src="assets/images/modal/pic8.jpeg" style="width: 100%" />
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">9 / 10</div>
+          <img src="assets/images/modal/pic9.jpeg" style="width: 100%" />
+        </div>
+        <div class="mySlides">
+          <div class="numbertext">10 / 10</div>
+          <img src="assets/images/modal/pic10.jpeg" style="width: 100%" />
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
