--- a/Develop/apply.html
+++ b/Develop/apply.html
@@ -11,6 +11,7 @@
 
 <body>
 
+
     <!--Header-->
     <header class="header">
 
@@ -20,15 +21,15 @@
 
 
     <div class="pagecontent">
-        <!-- <div class="gradient"> -->
+        <div class="gradient"> 
 
     </div>
     <h1>
         <div class="subtitle"> Washington D.C. <br>
             Trip Scholarship Application</div>
 
-    </h1>
-    <!-- countdown  clock-->
+    </h1> 
+    <!-- countdown  clock -->
     <a data-type="countdown" data-name="Application Deadline:" data-bg_color="#FFFFFF" data-border_color="#FFFFFF"
         data-name_color="#FF0000" data-digits_color="#000080" data-last_unit_color="#000080" data-dt="2022-11-22 "
         data-timezone="America/Chicago"
