Added media query

--- a/Develop/apply.html
+++ b/Develop/apply.html
@@ -20,23 +20,20 @@
   PerfectTenseEditor({ clientId: "6203cac33a4db032684a67ae" });
 </script>
     <!--Header-->
-    <header class="header">
-
+    <header id="weather" class="header">
         <h1><img src="./assets/images/logo_blue.jpg" alt="logo" /></h1>
-
     </header>
 
     <div class="pagecontent">
         <!-- <div class="gradient"> -->
-
     </div>
     <h1>
         <div class="subtitle"> Washington D.C. <br>
             Trip Scholarship Application</div>
-
     </h1>
+
     <!-- countdown  clock-->
-    <a data-type="countdown" data-name="Application Deadline:" data-bg_color="#FFFFFF" data-border_color="#FFFFFF"
+    <a  data-type="countdown" data-name="Application Deadline:" data-bg_color="#FFFFFF" data-border_color="#FFFFFF"
         data-name_color="#FF0000" data-digits_color="#000080" data-last_unit_color="#000080" data-dt="2022-11-22 "
         data-timezone="America/Chicago"
         style="display: block; width: 20%; position: relative; padding-bottom: 5%;border:none; margin: 15px  auto  5px auto ;"
@@ -46,14 +43,11 @@
     <div class="buttoncontainer">
         <a target="_blank" title="Close UP website "
             href="https://www.closeup.org/high-school/high-school-programs/washington-dc/">View Trip Details</a>
-
-        <a title="Award Requirements" href="#pagecontent">Award Requirements</a>
+        <a title="Award Requirements" href="index.html">Award Requirements</a>
         <a title="Matrix" href="matrix.html">Matrix (Internal)</a>
     </div>
 
     <!-- application -->
-
-
     <div class="container">
         <form class="applyform" id="form">
             <label for="name">Name:</label>
@@ -189,11 +183,7 @@
             <button id="submit" class="button">Submit</button>
         </form>
     </div>
-
-    <!-- <div id="modal">
-
     </div> -->
-
     <script src="//www.tickcounter.com/static/js/loader.js" id="tickcounter-sdk"></script>
     <script src="./assets/js/apply.js"></script>
 </body>
