--- a/Develop/matrix.html
+++ b/Develop/matrix.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <h1 class=" text-4xl font-bold text-center p-12 text-blue-900 w-full">
+    <h1 id="container" class=" text-4xl font-bold text-center p-12 text-blue-900 w-full">
         <img class="w-1/4 inline-block" src=" ./assets/images/logo blue.jpg"> <br><br><br><br>
         Scholarship Commitee Scoring Matrix
     </h1>
@@ -36,13 +36,6 @@
         <div class="col-span-1 border-2" contenteditable=""></div>
         <div class="col-span-1 text-right pr-5">Tuition Due</div>
         <div class="col-span-1 border-2" contenteditable=""></div>
-
-
-
-
-
-
-
 
     <div class="buttoncontainer">
         <a target="_blank" title="Close UP website "
@@ -188,7 +181,5 @@
     </div>
     <script src="./assets/js/matrix.js"></script>
 </body>
-
-<<<<<<< HEAD=======>>>>>>> 77cf2d99b3be9ea614fb091306d2952617ab3190
 
 </html>
