--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/Develop/assets/css/style.css" />
+    <link rel="stylesheet" href="./Develop/assets/css/style.css" />
 </head>
 
 <body>
@@ -62,7 +62,7 @@
 
     <div id="pagecontent" class="pagecontent">
 
-        <img src="./assets/images/logo_blue.jpg" alt="logo" />
+        <img src="./Develop/assets/images/logo_blue.jpg" alt="logo" />
 
         <h2 class="underline">2022 Patriot Scholarship Award Requirements</h2>
         <p class="bg-slate-200 text-center border-2 border-slate-400 rounded-md mx-40 p-4">
