--- a/apply.html
+++ b/apply.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./Develop/assets/css/modal.css" />
     <link rel="stylesheet" href="./Develop/assets/css/apply.css" />
     <title>Apply</title>
 </head>
@@ -48,6 +54,66 @@
         <a title="Award Requirements" href="index.html">Award Requirements</a>
         <a title="Matrix" href="matrix.html">Matrix (Internal)</a>
     </div>
+
+ <!-- image gallery -->
+ <div class="row" id="imageCarousel">
+      
+    <!-- images goes here -->
+  </div>
+  <!-- image modal -->
+  <div id="myModal" class="modal">
+    <span class="close cursor" onclick="closeModal()">&times;</span>
+    <div class="modal-content">
+      <div class="mySlides">
+        <div class="numbertext">1 / 10</div>
+        <img src="./Develop/assets/images/modal/pic1.jpeg" style="width: 100%" />
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">2 / 10</div>
+        <img src="./Develop/assets/images/modal/pic2.jpeg" style="width: 100%" />
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">3 / 10</div>
+        <img src="./Develop/assets/images/modal/pic3.jpeg" style="width: 100%" />
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">4 / 10</div>
+        <img src="./Develop/assets/images/modal/pic4.jpeg" style="width: 100%" />
+      </div>
+
+      <div class="mySlides">
+        <div class="numbertext">5 / 10</div>
+        <img src="./Develop/assets/images/modal/pic5.jpeg" style="width: 100%" />
+      </div>
+      <div class="mySlides">
+        <div class="numbertext">6 / 10</div>
+        <img src="./Develop/assets/images/modal/pic6.jpeg" style="width: 100%" />
+      </div>
+      <div class="mySlides">
+        <div class="numbertext">7 / 10</div>
+        <img src="./Develop/assets/images/modal/pic7.jpeg" style="width: 100%" />
+      </div>
+      <div class="mySlides">
+        <div class="numbertext">8 / 10</div>
+        <img src="./Develop/assets/images/modal/pic8.jpeg" style="width: 100%" />
+      </div>
+      <div class="mySlides">
+        <div class="numbertext">9 / 10</div>
+        <img src="./Develop/assets/images/modal/pic9.jpeg" style="width: 100%" />
+      </div>
+      <div class="mySlides">
+        <div class="numbertext">10 / 10</div>
+        <img src="./Develop/assets/images/modal/pic10.jpeg" style="width: 100%" />
+      </div>
+
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+  </div>
+
 
     <!-- application -->
     <div class="container">
@@ -187,6 +253,7 @@
     </div>
     </div> -->
     <script src="//www.tickcounter.com/static/js/loader.js" id="tickcounter-sdk"></script>
+    <script src="./Develop/assets/js/modal.js"></script>
     <script src="./Develop/assets/js/apply.js"></script>
 </body>
 
