Fixed links on Matrix

--- a/matrix.html
+++ b/matrix.html
@@ -40,8 +40,8 @@
     <div class="buttoncontainer">
         <a target="_blank" title="Close UP website "
             href="https://www.closeup.org/high-school/high-school-programs/washington-dc/">View Trip Details</a>
-        <a title="Open Modal " href="#" onclick="showModal()">Apply</a>
-        <a title="Award Requirements" href="#pagecontent">Award Requirements</a>
+        <a title="Open Modal" href="apply.html" onclick="showModal()">Apply</a>
+        <a title="Award Requirements" href="index.html">Award Requirements</a>
         <a title="Donate link" href="#">SMW Members Donate</a>
     </div>
     
